final adjustments to html page

--- a/data_vis_2_final/css/styles.css
+++ b/data_vis_2_final/css/styles.css
@@ -30,8 +30,8 @@ h1 .subtext {
 
 h2 {
     font-family: 'Arial', sans-serif;
-    color: #121212;
-    font-size: 17px;
+    color: #238b45;
+    font-size: 18px;
     margin-bottom: 10px;
     text-align: center;
 }
@@ -63,6 +63,7 @@ p {
     margin-bottom: 15px;
     flex-wrap: wrap;
 }
+
 .chart-column {
     flex: 1;
     box-sizing: border-box;
@@ -78,7 +79,7 @@ p {
     background: #CEF3DA; 
     border-left: 4px solid #238b45; 
     padding: 15px; 
-    margin: 15px; 
+    margin: 10px; 
     border-radius: 0 8px 8px 0;
 }
 
